test/spec_vectors/simd_i64x2_extmul_i32x4/fail/module_3.wat
(module (func (result v128) (i64x2.extmul_low_i32x4_u (i32.const 0) (f32.const 0.0))))